<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <TextView
        android:id="@+id/edCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameUser"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="97dp" />

    <EditText
        android:id="@+id/edDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dataNascimento"
        android:inputType="date"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="163dp" />

    <EditText
        android:id="@+id/edID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pessoalID"
        android:inputType="number"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="218dp" />

    <EditText
        android:id="@+id/edEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/endereço"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/edEMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="426dp" />

    <EditText
        android:id="@+id/edPasswordCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="senha"
        android:inputType="textPassword|numberPassword"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="494dp" />

    <EditText
        android:id="@+id/edCEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="phone"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="343dp" />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="595dp" />

</androidx.constraintlayout.widget.ConstraintLayout>